fix: make payment status visible always

--- a/assets/mspoplati/styles/oplati.app.scss
+++ b/assets/mspoplati/styles/oplati.app.scss
@@ -1,6 +1,6 @@
 .oplati-wrapper {
   margin: 3rem auto;
-  width: 30%;
+  width: 20rem;
   text-align: center;
   border-radius: 0.75rem;
   box-shadow: 0 .25rem 0.75rem silver;
@@ -42,5 +42,6 @@
   .oplati-status-block {
     margin-top: 1rem;
     color: dimgray;
+    font-size: 0.75rem;
   }
 }
